--- a/src/CombatAnalysis.App/Views/ChatView.xaml
+++ b/src/CombatAnalysis.App/Views/ChatView.xaml
@@ -32,7 +32,7 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.25*"/>
+            <RowDefinition Height="0.45*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="0.75*"/>
             <RowDefinition Height="0.05*"/>
@@ -46,10 +46,10 @@
             </ContentControl.Resources>
         </ContentControl>
 
-        <StackPanel Grid.Row="0" Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="30 10">
+        <StackPanel Grid.Row="0" Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="50 0">
             <StackPanel>
-                <TextBlock VerticalAlignment="Center" Text="Поиск группового чата" FontSize="18" Margin="0 0 20 0"/>
-                <ComboBox Height="30" Padding="5" Width="250" IsEditable="True" ItemsSource="{Binding Users}" />
+                <TextBlock VerticalAlignment="Center" Text="Поиск группового чата" FontSize="18"/>
+                <ComboBox Height="30" Padding="5" Width="250" IsEditable="True" ItemsSource="{Binding Users}" Margin="0 5" />
             </StackPanel>
             <Button Style="{StaticResource textBoxButton}" Margin="10 -5" VerticalAlignment="Bottom" HorizontalAlignment="Center" mvx:Bi.nd="Command CreateGroupChatCommand">
                 <Button.ToolTip>
@@ -61,7 +61,7 @@
             </Button>
         </StackPanel>
         
-        <Border Grid.Column="2" Grid.Row="1" Grid.RowSpan="3">
+        <Border Grid.Column="2" Grid.Row="1" Grid.RowSpan="3" Margin="0 -20">
             <Grid>
                 <StackPanel Orientation="Horizontal" Margin="30 0 0 30">
                     <Rectangle Width="0.8" Stroke="#dadada" VerticalAlignment="Stretch"/>
@@ -167,7 +167,7 @@
 
         <StackPanel Grid.Row="0" Grid.Column="3" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left">
             <StackPanel>
-                <TextBlock VerticalAlignment="Center" Text="Поиск пользователя" FontSize="18" Margin="0 0 20 0"/>
+                <TextBlock VerticalAlignment="Center" Text="Поиск пользователя" FontSize="18"/>
                 <StackPanel Orientation="Horizontal">
                     <ComboBox Height="30" Padding="5" Width="250" IsEditable="True" ItemsSource="{Binding UserEmails}" SelectedIndex="{Binding SelectedUserEmailsIndex}"
                           StaysOpenOnEdit="True" Text="{Binding InputedUserEmail}"/>
@@ -205,8 +205,8 @@
             </StackPanel>
         </Border>
         
-        <Border Name="test" CornerRadius="15" Background="WhiteSmoke" Grid.Column="3" Grid.Row="1" Grid.RowSpan="3" 
-                Margin="0 0 30 30" ClipToBounds="True">
+        <Border CornerRadius="15" Background="WhiteSmoke" Grid.Column="3" Grid.Row="1" Grid.RowSpan="3" 
+                Margin="0 -20 30 30" ClipToBounds="True">
             <Grid>
                 <TextBlock Name="choiceChat" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Выберите чат для общения"
                            FontSize="18" FontStyle="Italic" Visibility="{Binding SelectedMyGroupChatIndex, Converter={StaticResource IntToVisibility}, ConverterParameter='true:-1:='}"/>
